Added 'Quizlify' button and quizletQuestions function.
This function opens a new tab and lists the vocab in the format "term:
defintion" for easy bulk-importing into quizlet.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <button type="button" id="add-btn" class="btn btn-dark btn-primary">Add</button>
                 <button type="button" id="import-btn" class="btn btn-dark btn-primary">Import</button>
                 <button type="button" id="export-btn" class="btn btn-dark btn-primary">Export</button>
+                <button type="button" id="quizlet-btn" class="btn btn-dark btn-primary">Quizlify</button>
                 <button type="button" id="start-btn" class="btn btn-dark btn-primary">Start again</button>
             </div>
         </div>
@@ -193,9 +194,15 @@
                  </div> -->
             <!-- </div> -->
         </div>
+        <!-- <div> -->
+        <!--         <button type="button" id="test-btn" class="btn btn-dark btn-primary">Test</button> -->
+        <!-- </div> -->
     </div>
     <div class="container-fluid flex-column bg-secondary filler"></div>
     <script src="./app.js"></script>
+    <script src=".env.js"></script>
 </body>
+<footer>
 
+</footer>
 </html>
